<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitish_purple"
    tools:context=".main.Activities.SettingsActivity">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_top_textview"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/whitish_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_back_settings"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_preferences"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_settings"
        android:backgroundTint="@color/good_purple"
        android:gravity="bottom"
        android:text="@string/preferences"
        android:textColor="@color/deep_purple"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:gravity="bottom"
        android:text="@string/language"
        android:textColor="@color/deep_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_preferences" />

    <TextView
        android:id="@+id/tv_misc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_settings"
        android:backgroundTint="@color/good_purple"
        android:gravity="bottom"
        android:text="@string/misc"
        android:textColor="@color/deep_purple"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_language" />

    <TextView
        android:id="@+id/tv_support"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:gravity="bottom"
        android:text="@string/email_support"
        android:textColor="@color/deep_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_misc" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_settings"
        android:backgroundTint="@color/good_purple"
        android:gravity="bottom"
        android:text="@string/account"
        android:textColor="@color/deep_purple"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_support" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="410dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:text="@string/logout"
        android:textColor="@color/deep_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account"
        app:drawableStartCompat="@android:drawable/ic_menu_revert" />

    <ProgressBar
        android:id="@+id/pb_settings"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="400dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>