<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitish_purple"
    tools:context=".main.Activities.DiaperActivity">

    <TextView
        android:id="@+id/tv_diaper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_top_textview"

        android:gravity="center_horizontal"
        android:text="@string/diaper"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/whitish_purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_back_diaper"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <RadioGroup
        android:id="@+id/rg_diaper"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="55dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ol_tf_diaper">

        <RadioButton
            android:id="@+id/rb_dry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/epic_purple"

            android:text="@string/dry"
            android:textColor="@color/deep_purple"
            android:textSize="24sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/rb_wet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/epic_purple"

            android:text="@string/wet"
            android:textColor="@color/deep_purple"
            android:textSize="24sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/rb_dirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/epic_purple"

            android:text="@string/dirty"
            android:textColor="@color/deep_purple"
            android:textSize="24sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/rb_mixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/epic_purple"

            android:minHeight="48dp"
            android:text="@string/mixed"
            android:textColor="@color/deep_purple"
            android:textSize="24sp"
            android:textStyle="normal" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ol_tf_diaper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:hint="@string/time_string"
        android:textColorHint="@color/deep_purple"
        app:boxStrokeColor="@color/less_purple"
        app:hintTextColor="@color/deep_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diaper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_in_et_diaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="true"

            android:gravity="center_vertical"
            android:textColor="@color/deep_purple"
            android:textColorHint="@color/deep_purple"
            android:textSize="24sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ol_tf_note_diaper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:hint="@string/hint_note"
        android:textColorHint="@color/deep_purple"
        app:boxStrokeColor="@color/good_purple"
        app:hintTextColor="@color/deep_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_diaper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_in_et_note_diaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:textColor="@color/deep_purple"
            android:textColorHint="@color/deep_purple"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel_diaper"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_left"

        android:text="@string/cancel"
        android:textColor="@color/deep_purple"
        android:textStyle="bold"
        app:backgroundTint="@color/whitish_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ol_tf_note_diaper" />

    <Button
        android:id="@+id/btn_save_diaper"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_right"

        android:text="@string/save"
        android:textColor="@color/whitish_purple"
        android:textStyle="bold"
        app:backgroundTint="@color/deep_purple"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_diaper"
        app:layout_constraintTop_toBottomOf="@+id/ol_tf_note_diaper"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/pb_diaper"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ol_tf_note_diaper" />

    <Button
        android:id="@+id/btn_chron_diaper"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="@android:drawable/ic_menu_recent_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>