<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitish_purple"
    tools:context=".main.Activities.ForgottenPassword">

    <TextView
        android:id="@+id/tv_forgotten_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_top_textview"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forgotten_password"
        android:textAllCaps="false"
        android:textColor="@color/whitish_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_fpw_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,UsingOnClickInXml" />

    <EditText
        android:id="@+id/et_email_pw_reset"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="112dp"
        android:background="@color/good_purple"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/deep_purple"
        android:textColorHint="@color/deep_purple"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_reset_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/rectangle_all"
        android:text="@string/reset_password"
        android:textStyle="bold"
        app:backgroundTint="@color/deep_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_pw_reset"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/pb_reset_pw"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="55dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>